# python-multi-app-demo

./: .gitignore  README.md
applications/all-in-one/: .dockerignore  Dockerfile  README.md  build.sh  pyproject.toml
applications/all-in-one/src/all_in_one/: server.py
applications/all-in-one/supervisord/: entrypoint.sh
applications/all-in-one/supervisord/configs/: app1.conf  app2.conf  composite.conf  multiprocess.conf
applications/all-in-one/supevirsord/: all-in-one.conf  app1.conf  app2.conf  composite.conf  entrypoint.sh
applications/app1/: pyproject.toml
applications/app1/src/app1/: server.py
applications/app2/: pyproject.toml
applications/app2/src/app2/: server.py
